--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -161,6 +161,12 @@
 
   --underline-offset-3: 3px;
 
+  --width-stretch: stretch;
+  --max-width-main: min(42.5rem, 100%);
+
+  --height-stretch: stretch;
+
+
   @keyframes dropdown {
     0% { transform: translateY(-1rem) }
     10% { opacity: 0 }
@@ -727,10 +733,10 @@
   --_pictogram-gap: 1.5rem;
   --_main-toc-gap: clamp(2.5rem, -6.5rem + 15vw, 8.5rem);
   justify-content: center;
-  grid-template-columns: [full-start] var(--spacing-page) [container-start] auto [pictogram-start main-start toc-start] var(--_main) [pictogram-end main-end toc-end] 1fr [container-end] var(--spacing-page) [full-end]
+  grid-template-columns: [full-start] var(--spacing-page) [container-start] minmax(0, 1fr) [pictogram-start main-start toc-start] var(--_main) [pictogram-end main-end toc-end] minmax(0, 1fr) [container-end] var(--spacing-page) [full-end]
 }
 
-@media (width > 1024px) {
+/* @media (width > 1024px) {
   .grid-cols-article {
     grid-template-columns: 
       [full-start] var(--spacing-page) 
@@ -738,7 +744,7 @@
       [main toc] var(--_main) 1fr 
       [container-end] var(--spacing-page) [full-end]
   }
-}
+} */
 
 
 @media (width > 1200px) {
