--- a/src/pages/forside/forside.njk
+++ b/src/pages/forside/forside.njk
@@ -56,7 +56,7 @@ permalink: '/'
         <h2 class="font-semibold text-fluid-24-28 ">Aktuelt</h2>
         <div class="grid gap-2 mt-3 sm:grid-cols-2 sm:gap-6">
           {%- for news in newsList -%}
-          <article class="relative grid pl-4 md:pl-6 pr-16 py-4 py-6 rounded-lg bg-slate-100 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between has-[a:hover]:ring has-[a:hover]:ring-deepblue-300">
+          <article class="relative grid pl-4 md:pl-6 pr-16 py-6 rounded-lg bg-slate-100 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600 content-between has-[a:hover]:ring has-[a:hover]:ring-deepblue-300">
             <h3 class="mb-auto leading-snug text-fluid-20-22">
               <a class="text-blue-600 after:z-10 after:absolute after:inset-0 focus-visible:outline-none" href="#">{{ news.title | safe }}</a>
             </h3>
