Forbedringer av TOC
- Demper området rundt
- Animerer flytende TOC inn når bruker scroller forbi fast TOC

--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -30,7 +30,7 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse #}
-    <div class="lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-40px.0.0.0="floatingToc = true" x-intersect:enter.margin.40px.0.0.0="floatingToc = false, floatingTocOpen = false">
+    <div class="lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-120px.0.0.0="floatingToc = true" x-intersect:enter.margin.120px.0.0.0="floatingToc = false, floatingTocOpen = false">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
         <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}</a>
         <span>Innhold på siden</span>
@@ -60,39 +60,51 @@
     </div>
 
     {# Floating TOC #}
-    <details 
-      class="fixed inset-x-0 bottom-0 z-50 flex flex-col justify-center bg-white ring-8 ring-white open:max-h-screen px-page overflow-clip lg:hidden group" x-show="floatingToc"
+    <div 
+      class="fixed inset-x-0 bottom-0 z-50 open:max-h-screen lg:hidden group"
+      x-show="floatingToc" 
+      x-transition:enter="transition ease-out duration-150"
+      x-transition:enter-start="opacity-0 translate-y-full"
+      x-transition:enter-end="opacity-100 translate-y-0"
+      x-transition:leave="transition ease-in duration-300"
+      x-transition:leave-start="translate-y-0"
+      x-transition:leave-end="opacity-0 translate-y-full"
     >
-      <summary class="flex bg-slate-100 max-w-main w-full mx-auto rounded-full group-open:rounded-t-2xl group-open:rounded-b-none items-baseline py-2 shrink-0 font-semibold gap-x-0.5 text-fluid-18-20 px-4 mb-2 group-open:mb-0">
-        {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
-        <span>Innhold på siden</span>
-        {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1') | safe  }}
-      </summary>
+      <div class="h-6 translate-y-2 border-b-8 border-white bg-gradient-to-b from-transparent to-white"></div>
+      <details class="relative z-10 flex flex-col justify-center w-full mx-auto bg-white rounded-t-2xl max-w-main ring-2 ring-slate-200 open:ring-white isolate peer" id="floatingToc">
+        <summary class="flex rounded-t-2xl z-20 items-baseline py-2 shrink-0 font-semibold bg-slate-100 hover:bg-slate-200 cursor-pointer gap-x-0.5 text-fluid-18-20 px-4">
+          {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
+          <span>Innhold på siden</span>
+          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1') | safe  }}
+        </summary>
 
-      <div class="grid grid-rows-[1fr_auto] overscroll-contain bg-slate-100 mt-auto overflow-y-auto max-w-main w-full mx-auto max-h-[70vh] px-10 pb-8">
-        <ul class="text-fluid-16-18/snug">
-          {% for chapter in chapters %}
-          {% set chapterIndex = loop.index %}
-          <li class="mt-1">
-            <a class="inline-block px-1 py-1 underline hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
-              {{ chapter.data.title }}
-            </a>
-            {% if (chapter.templateContent | tocData).length >= 1 %}           
-            <ul class="mt-0.5 ml-1 border-l-2 pl-3 mb-6 border-slate-300">
-            {% for item in chapter.templateContent | tocData %}
-              <li class="py-0.5">
-                <a class="inline-block px-1 py-1 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
-                  <span>{{ item.text }}</span>
-                </a>
-              </li>
+        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-[70vh] mt-auto overflow-y-auto max-w-main w-full mx-auto px-10 pt-4 pb-8">
+          <ul class="text-fluid-16-18/snug">
+            {% for chapter in chapters %}
+            {% set chapterIndex = loop.index %}
+            <li class="mt-1">
+              <a class="inline-block px-1 py-1 underline hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
+                {{ chapter.data.title }}
+              </a>
+              {% if (chapter.templateContent | tocData).length >= 1 %}           
+              <ul class="mt-0.5 ml-1 border-l-2 pl-3 mb-6 border-slate-300">
+              {% for item in chapter.templateContent | tocData %}
+                <li class="py-0.5">
+                  <a class="inline-block px-1 py-1 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
+                    <span>{{ item.text }}</span>
+                  </a>
+                </li>
+              {% endfor %}
+              </ul>
+              {% endif %}
+            </li>
             {% endfor %}
-            </ul>
-            {% endif %}
-          </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </details>
+          </ul>
+        </div>
+      </details>
+      <button type="button" class="fixed inset-0 hidden peer-open:block bg-slate-800/25 backdrop-blur-xs -z-0" onclick="document.getElementById('floatingToc').removeAttribute('open')"></button>
+    </div>
+
 
 
     {# Innhold #}
