--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -61,7 +61,7 @@
 
     {# Floating TOC #}
     <div 
-      class="fixed inset-x-0 bottom-0 z-50 open:max-h-screen lg:hidden group"
+      class="fixed inset-x-0 bottom-0 z-50 grid justify-items-center open:max-h-screen px-page lg:hidden group"
       x-show="floatingToc" 
       x-transition:enter="transition ease-out duration-150"
       x-transition:enter-start="opacity-0 translate-y-full"
@@ -71,14 +71,15 @@
       x-transition:leave-end="opacity-0 translate-y-full"
     >
       <div class="h-6 translate-y-2 border-b-8 border-white bg-gradient-to-b from-transparent to-white"></div>
-      <details class="relative z-10 flex flex-col justify-center w-full mx-auto bg-white rounded-t-2xl max-w-main ring-2 ring-slate-200 open:ring-white isolate peer" id="floatingToc">
+
+      <details class="relative z-10 flex flex-col justify-center bg-white w-stretch rounded-t-2xl max-w-main ring-2 ring-slate-200 open:ring-white isolate peer" id="floatingToc">
         <summary class="flex rounded-t-2xl z-20 items-baseline py-2 shrink-0 font-semibold bg-slate-100 hover:bg-slate-200 cursor-pointer gap-x-0.5 text-fluid-18-20 px-4">
           {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
           <span>Innhold på siden</span>
           {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1') | safe  }}
         </summary>
 
-        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-[70vh] mt-auto overflow-y-auto max-w-main w-full mx-auto px-10 pt-4 pb-8">
+        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-[95vh] sm:max-h-[60vh] mt-auto overflow-y-auto max-w-main w-full pt-4 pb-8 px-3.5">
           <ul class="text-fluid-16-18/snug">
             {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
@@ -91,7 +92,7 @@
               {% for item in chapter.templateContent | tocData %}
                 <li class="py-0.5">
                   <a class="inline-block px-1 py-1 underline text-gray-900/80 hover:text-blue-700 decoration-slate-800/40 hover:decoration-2" href="#{{ item.id }}" x-on:click="floatingTocOpen = false">
-                    <span>{{ item.text }}</span>
+                    {{ item.text }}
                   </a>
                 </li>
               {% endfor %}
