--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -83,7 +83,9 @@
           <ul class="text-fluid-16-18/snug">
             {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
-            <li class="mt-1">
+            <li class="relative pl-6 not-first:mt-1">
+              <div class="absolute w-2 mt-3 rounded-full left-1 aspect-square" x-bind:class="(chapterIndex == {{ chapterIndex }}) && 'bg-slate-600'"></div>
+
               <a class="inline-block px-1 py-1 underline hover:text-blue-700 hover:decoration-2 decoration-slate-800/40" href="#{{ chapter.data.title | slugify }}" x-on:click="floatingTocOpen = false">
                 {{ chapter.data.title }}
               </a>
