--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -30,7 +30,7 @@
     {% block quicklinks %}{% endblock %}
 
     {# Innholdsfortegnelse #}
-    <div class="lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-120px.0.0.0="floatingToc = true" x-intersect:enter.margin.120px.0.0.0="floatingToc = false, floatingTocOpen = false">
+    <div class="hidden lg:block lg:row-span-4 lg:sticky lg:row-start-2 xl:row-start-2 lg:top-0 col-toc max-h-[99svh] overflow-auto toc" id="toc" x-intersect:leave.margin.-120px.0.0.0="floatingToc = true" x-intersect:enter.margin.120px.0.0.0="floatingToc = false, floatingTocOpen = false">
       <h2 class="flex items-baseline sticky z-10 lg:bg-white top-0 py-2 font-semibold gap-x-0.5 text-fluid-18-20">
         <a href="#toppen">{{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}</a>
         <span>Innhold på siden</span>
@@ -61,26 +61,18 @@
 
     {# Floating TOC #}
     <div 
-      class="fixed inset-x-0 bottom-0 z-50 grid justify-items-center open:max-h-screen px-page lg:hidden group"
-      x-show="floatingToc" 
-      x-transition:enter="transition ease-out duration-150"
-      x-transition:enter-start="opacity-0 translate-y-full"
-      x-transition:enter-end="opacity-100 translate-y-0"
-      x-transition:leave="transition ease-in duration-300"
-      x-transition:leave-start="translate-y-0"
-      x-transition:leave-end="opacity-0 translate-y-full"
-    >
-      <div class="h-6 translate-y-2 border-b-8 border-white bg-gradient-to-b from-transparent to-white"></div>
+      class="fixed inset-x-0 bottom-0 z-50 grid justify-items-center open:max-h-screen px-page lg:hidden">
+      <div class="h-6 translate-y-2 border-b-8 border-white w-stretch bg-gradient-to-b from-transparent to-white"></div>
 
-      <details class="relative z-10 flex flex-col justify-center bg-white w-stretch rounded-t-2xl max-w-main ring-2 ring-slate-200 open:ring-white isolate peer" id="floatingToc">
+      <details class="relative z-10 flex flex-col justify-center bg-white shadow-toc w-stretch rounded-t-2xl max-w-main ring-2 ring-slate-300 open:ring-slate-100 isolate group peer/details" id="floatingToc">
         <summary class="flex rounded-t-2xl z-20 items-baseline py-2 shrink-0 font-semibold bg-slate-100 hover:bg-slate-200 cursor-pointer gap-x-0.5 text-fluid-18-20 px-4">
           {{ '/src/_includes/svg/icons/document.svg' | svgContents('w-6 h-6 translate-y-1 -translate-x-1') | safe  }}
           <span>Innhold på siden</span>
-          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1') | safe  }}
+          {{ '/src/_includes/svg/icons/chevron-down.svg' | svgContents('w-6 h-6 ml-auto translate-y-1 -translate-x-1 group-open:rotate-180') | safe  }}
         </summary>
 
-        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-[95vh] sm:max-h-[60vh] mt-auto overflow-y-auto max-w-main w-full pt-4 pb-8 px-3.5">
-          <ul class="text-fluid-16-18/snug">
+        <div class="relative grid grid-rows-[1fr_auto] z-20 overscroll-contain max-h-0 group-open:max-h-[95vh] sm:group-open:max-h-[60vh] mt-auto overflow-y-auto max-w-main w-full pt-4 pb-8 px-3.5 transition-all duration-300">
+          <ul class="transition-all text-fluid-16-18/snug">
             {% for chapter in chapters %}
             {% set chapterIndex = loop.index %}
             <li class="relative pl-6 not-first:mt-1">
@@ -105,7 +97,7 @@
           </ul>
         </div>
       </details>
-      <button type="button" class="fixed inset-0 hidden peer-open:block bg-slate-800/25 backdrop-blur-xs -z-0" onclick="document.getElementById('floatingToc').removeAttribute('open')"></button>
+      <button type="button" class="fixed inset-0 hidden peer-open/details:block bg-slate-800/25 backdrop-blur-xs -z-0" onclick="document.getElementById('floatingToc').removeAttribute('open')"></button>
 
       <script>
         const tocLinks = document.getElementById('floatingToc')
