--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -153,6 +153,7 @@
   --shadow-border: 0 -1px 0 inset var(--color-gray-600/10);
   --shadow-menuActive: 0 -3px 0 inset var(--color-blue-500);
   --shadow-menuHover: 0 -3px 0 inset var(--color-black/10);
+  --shadow-toc: 0 -8px 18px -6px --alpha(var(--color-black) / 10%);
 
   --shrink-1: 1;
   --shrink-5: 5;
@@ -165,6 +166,9 @@
   --max-width-main: min(42.5rem, 100%);
 
   --height-stretch: stretch;
+
+  interpolate-size: allow-keywords;
+
 
 
   @keyframes dropdown {
