--- a/src/_includes/article-page.njk
+++ b/src/_includes/article-page.njk
@@ -62,7 +62,7 @@
     {# Floating TOC #}
     <div 
       class="fixed inset-x-0 bottom-0 z-50 grid justify-items-center open:max-h-screen px-page lg:hidden">
-      <div class="h-6 translate-y-2 border-b-8 border-white w-stretch bg-gradient-to-b from-transparent to-white"></div>
+      <div class="h-6 translate-y-2 border-b-8 border-white pointer-events-none w-stretch bg-gradient-to-b from-transparent to-white"></div>
 
       <details class="relative z-10 flex flex-col justify-center bg-white shadow-toc w-stretch rounded-t-2xl max-w-main ring-2 ring-slate-300 open:ring-slate-100 isolate group peer/details" id="floatingToc">
         <summary class="flex rounded-t-2xl z-20 items-baseline py-2 shrink-0 font-semibold bg-slate-100 hover:bg-slate-200 cursor-pointer gap-x-0.5 text-fluid-18-20 px-4">
