--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,6 +1,6 @@
 {% macro tile(args) %}
 <!-- Tile -->
-<div class="relative pl-5 pr-16 py-4 rounded-lg group leading-tight bg-white border border-slate-300  {{ args.theme or "has-[a:hover]:bg-blue-50 has-[a:active]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600" }}">
+<div class="relative pl-5 pr-16 py-4 rounded-lg shadow-sm group leading-tight bg-white ring ring-slate-200  {{ args.theme or "has-[a:hover]:bg-blue-50 has-[a:active]:bg-blue-50 has-[a:focus-visible]:ring has-[a:focus-visible]:ring-blue-600" }}">
   <a class="z-10 flex-1 font-semibold text-blue-600 no-underline text-fluid-18-20 text-pretty after:absolute after:inset-0 hover:underline hover:decoration-2 focus-visible:outline-none" href="#">
     {{ args.title }}
   </a>
