--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,7 +11,7 @@
   --breakpoint-xs: 400px;
   --breakpoint-sm: 768px;
   --breakpoint-md: 1024px;
-  --breakpoint-lg: 1200px;
+  --breakpoint-lg: 1280px;
   --breakpoint-xl: 1440px;
 
   --color-blue-50: rgb(230 240 255);
@@ -36,16 +36,16 @@
   --color-deepblue-800: rgb(0 52 83);
   --color-deepblue-900: rgb(0 36 58);
 
-  --color-gray-50: rgb(247 247 247);
-  --color-gray-100: rgb(241 241 241);
-  --color-gray-200: rgb(229 229 229);
-  --color-gray-300: rgb(207 207 207);
-  --color-gray-400: rgb(176 176 176);
-  --color-gray-500: rgb(143 143 143);
-  --color-gray-600: rgb(112 112 112);
-  --color-gray-700: rgb(89 89 89);
-  --color-gray-800: rgb(64 64 64);
-  --color-gray-900: rgb(38 38 38);
+  --color-gray-50: rgb(242 243 245);
+  --color-gray-100: rgb(236 238 240);
+  --color-gray-200: rgb(224 227 230);
+  --color-gray-300: rgb(203 207 213);
+  --color-gray-400: rgb(170 176 186);
+  --color-gray-500: rgb(131 140 154);
+  --color-gray-600: rgb(103 111 123);
+  --color-gray-700: rgb(82 89 98);
+  --color-gray-800: rgb(66 71 79);
+  --color-gray-900: rgb(35 38 42);
 
   --color-green-50: rgb(243 252 245);
   --color-green-100: rgb(204 241 214);
@@ -88,10 +88,11 @@
   --color-orange-300: rgb(255 193 102);
   --color-orange-400: rgb(255 170 51);
   --color-orange-500: rgb(255 145 0);
-  --color-orange-600: rgb(212 123 0);
+  --color-orange-600: rgb(199 115 0);
   --color-orange-700: rgb(168 100 0);
   --color-orange-800: rgb(125 76 0);
   --color-orange-900: rgb(82 51 0);
+
 
   --color-purple-50: rgb(239 236 244);
   --color-purple-100: rgb(224 216 233);
@@ -158,7 +159,7 @@
   --shrink-1: 1;
   --shrink-5: 5;
 
-  --spacing-page: clamp(1rem, -3.5rem + 15vi, 10rem);
+  --spacing-page: clamp(1rem, -5rem + 15vw, 10rem);
 
   --underline-offset-3: 3px;
 
@@ -408,7 +409,7 @@
     font-size: var(--text-fluid-18-20);
     font-weight: 400;
     line-height: 1.375;
-    background-color: var(--color-white);
+    background-color: var(--color-orange-50);
     color: var(--color-blue-600);
   }
 
@@ -430,7 +431,7 @@
   }
 
   .accordion summary:before {
-    background-color: var(--color-blue-50);
+    background-color: var(--color-blue-100);
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-repeat: no-repeat;
     background-position: center;
@@ -447,7 +448,7 @@
   }
 
   .accordion :where(details:has(summary:hover)) summary:not(:focus-visible) {
-    outline: 6px solid white;
+    outline: 6px solid var(--color-orange-50);
   }
 
   .accordion :where(details[open]) summary:before {
@@ -468,7 +469,7 @@
     padding-inline-start: --spacing(5);
     margin-inline-start: calc(--spacing(5) * -1);
     translate: -1px 0;
-    border-inline-start: 2px solid var(--color-slate-400);
+    border-inline-start: 2px solid var(--color-slate-300);
   }
 
   [data-theme="sykepenger"] :where(.accordion) details {
@@ -751,7 +752,7 @@
 } */
 
 
-@media (width > 1200px) {
+@media (width > 1280px) {
   .grid-cols-article {
     --_main: minmax(0, min(42.5rem, 70%));
     --_toc: minmax(0, min(22.5rem, 30%));
