--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -409,7 +409,7 @@
     font-size: var(--text-fluid-18-20);
     font-weight: 400;
     line-height: 1.375;
-    background-color: var(--color-orange-50);
+    background-color: var(--color-white);
     color: var(--color-blue-600);
   }
 
